Pic icons markup

--- a/markup/forms/index.html
+++ b/markup/forms/index.html
@@ -27,8 +27,8 @@
               <li><a href="">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href=""><i class="material-icons">phone</i></a></li>
-              <li><a href="" data-activates="slide-out" class="b-header-nav"><i class="material-icons">view_headline</i></a></li>
+              <li><a href="" class="b-phone-icon"><i></i></a></li>
+              <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="col-sm-12">
             <nav>
-              <ul class="tabs">
+              <ul class="unstyled tabs">
                 <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
                 <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
                 <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
