--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -27,8 +27,8 @@
               <li><a href="">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href=""><i class="material-icons">phone</i></a></li>
-              <li><a href="" data-activates="slide-out" class="b-header-nav"><i class="material-icons">view_headline</i></a></li>
+              <li><a href="" class="b-phone-icon"><i></i></a></li>
+              <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
