--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -110,10 +110,46 @@
     </section>
     <footer class="b-footer">
       <section class="container">
-        <div class="b-row">
-          <div class="b-col-sm-4"></div>
-          <div class="b-col-sm-4"></div>
-          <div class="b-col-sm-4"></div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>О компании</h3>
+            <pS7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</pS7>
+          </div>
+          <div class="col-sm-4">
+            <h3>Офис</h3>
+            <p>Мневники, дом 3, строение 1, офис 224.<br><a href="">На карте (Схема проезда)</a></p>
+            <h3>Телефоны</h3>
+            <p>+ 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)</p>
+            <hr class="i-unstyled">
+            <ul class="unstyled b-footer-social">
+              <li><a href="" class="i-vk"></a></li>
+              <li><a href="" class="i-ok"></a></li>
+              <li><a href="" class="i-fb"></a></li>
+              <li><a href="" class="i-tw"></a></li>
+              <li><a href="" class="i-gp"></a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <h3>Полезная информация</h3>
+            <ul class="unstyled">
+              <li><a href="">Туры</a></li>
+              <li><a href="">Авиабилеты</a></li>
+              <li><a href="">Отели</a></li>
+              <li><a href="">Аренда автомобилей</a></li>
+              <li><a href="">О компании</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr class="i-size-L">
+        <div class="xsmall">
+          <p>Все приведенные на настоящем сайте стоимостные показатели туристских услуг являются частью оферты, предназначенной для юридических лиц (туристских агентств) заключивших договоры с ООО "Джет Тревел" и занесенных в реестр агентств ООО "Джет Тревел".</p>
+          <p>ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.</p>
+          <p>Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.</p>
+        </div>
+        <hr class="i-unstyled i-size-S">
+        <div class="row xsmall">
+          <div class="col-xs-6">© Сopyright. Traveller 2016</div>
+          <div class="col-xs-6 text-right"><a href="http://bejet.ru" target="_blank">Решение создано в Bejet.</a></div>
         </div>
       </section>
     </footer>
