Index page makup.

--- a/markup/forms/index.html
+++ b/markup/forms/index.html
@@ -60,7 +60,7 @@
             </nav>
           </div>
           <div id="form1" class="col-sm-12 b-forms__tab">
-            <div style="width: 300px; background-color: pink;">form1</div>
+            <div style="width: 300px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/da489d8f0fb702dbcbd9a81294264b48.js?v=469" async></script></div>
           </div>
           <div id="form2" class="col-sm-12 b-forms__tab">
             <div style="width: 100px; background-color: lightgreen;">form2</div>
@@ -87,7 +87,7 @@
             <p>Мневники, дом 3, строение 1, офис 224.<br><a href="">На карте (Схема проезда)</a></p>
             <h3>Телефоны</h3>
             <p>+ 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)</p>
-            <hr class="i-unstyled">
+            <hr class="unstyled">
             <ul class="unstyled b-footer-social">
               <li><a href="" class="i-vk"></a></li>
               <li><a href="" class="i-ok"></a></li>
@@ -96,6 +96,7 @@
               <li><a href="" class="i-gp"></a></li>
             </ul>
           </div>
+          <hr class="unstyled visible-xs-block">
           <div class="col-sm-4">
             <h3>Полезная информация</h3>
             <ul class="unstyled">
@@ -113,7 +114,7 @@
           <p>ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.</p>
           <p>Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.</p>
         </div>
-        <hr class="i-unstyled i-size-S">
+        <hr class="unstyled i-size-S">
         <div class="row xsmall">
           <div class="col-xs-6">© Сopyright. Traveller 2016</div>
           <div class="col-xs-6 text-right"><a href="http://bejet.ru" target="_blank">Решение создано в Bejet.</a></div>
