--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -57,7 +57,7 @@
             <li>Пункт списка</li>
             <li>Пункт списка</li>
           </ul>
-          <hr class="i-unstyled">
+          <hr class="unstyled">
           <ol>
             <li>Пункт списка</li>
             <li>Есть масса путеводителей по странам, но ни одного о том, как провести время в самолете. Для того, чтобы сделать ваш перелет максимально комфортным, мы написали 20 советов о подготовке к путешествию. Ведь настоящее путешествие начинается со слов «Добро пожаловать на борт нашего самолета»!</li>
@@ -75,7 +75,7 @@
               <S7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</S7>
             </div>
           </div>
-          <hr class="i-unstyled">
+          <hr class="unstyled">
           <div class="row">
             <div class="col-sm-6">
               <S7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</S7>
@@ -120,7 +120,7 @@
             <p>Мневники, дом 3, строение 1, офис 224.<br><a href="">На карте (Схема проезда)</a></p>
             <h3>Телефоны</h3>
             <p>+ 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)</p>
-            <hr class="i-unstyled">
+            <hr class="unstyled">
             <ul class="unstyled b-footer-social">
               <li><a href="" class="i-vk"></a></li>
               <li><a href="" class="i-ok"></a></li>
@@ -129,6 +129,7 @@
               <li><a href="" class="i-gp"></a></li>
             </ul>
           </div>
+          <hr class="unstyled visible-xs-block">
           <div class="col-sm-4">
             <h3>Полезная информация</h3>
             <ul class="unstyled">
@@ -146,7 +147,7 @@
           <p>ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.</p>
           <p>Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.</p>
         </div>
-        <hr class="i-unstyled i-size-S">
+        <hr class="unstyled i-size-S">
         <div class="row xsmall">
           <div class="col-xs-6">© Сopyright. Traveller 2016</div>
           <div class="col-xs-6 text-right"><a href="http://bejet.ru" target="_blank">Решение создано в Bejet.</a></div>
