--- a/markup/index.html
+++ b/markup/index.html
@@ -44,10 +44,10 @@
     </header>
     <section class="container">
       <hr class="i-unstyled">
-      <!-- start /components/banner.3/-->
-      <div class="b-banner-3 b-banner">
+      <!-- start /components/banner.21/-->
+      <div class="b-banner-21 b-banner">
         <div class="row">
-          <div style="background-image: url( '/upload/banner1.jpg' )" class="col-sm-12">
+          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
             <div class="b-banner__text">
               <div class="b-banner__section">Старушка Европа</div>
               <div class="b-banner__title">Увидеть Париж</div>
@@ -58,9 +58,20 @@
               </div>
             </div>
           </div>
+          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
+            <div class="b-banner__text">
+              <div class="b-banner__section">Сказка</div>
+              <div class="b-banner__title">Северное сияние в Исландии</div>
+              <div class="b-banner__type">Туры с авиаперелетом</div>
+              <div class="b-banner__price">
+                от
+                 <span class="b-banner__price__num">466 800 руб.</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- end /components/banner.3/-->
+      <!-- end /components/banner.21/-->
       <!-- start /components/banner.111/-->
       <div class="b-banner-111 b-banner">
         <div class="row">
@@ -100,34 +111,6 @@
         </div>
       </div>
       <!-- end /components/banner.111/-->
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
-        <div class="row">
-          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Старушка Европа</div>
-              <div class="b-banner__title">Увидеть Париж</div>
-              <div class="b-banner__type">Прогулки по летнему Парижу</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">76 900 руб.</span>
-              </div>
-            </div>
-          </div>
-          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Сказка</div>
-              <div class="b-banner__title">Северное сияние в Исландии</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">466 800 руб.</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/banner.21/-->
       <!-- start /components/banner.12/-->
       <div class="b-banner-12 b-banner">
         <div class="row">
@@ -156,6 +139,70 @@
         </div>
       </div>
       <!-- end /components/banner.12/-->
+      <hr class="i-unstyled i-size-S">
+      <!-- start /components/forms/-->
+      <link rel="stylesheet" href="/components/forms/style.css">
+      <script src="/components/forms/script.js"></script>
+      <div class="b-forms">
+        <div class="row">
+          <div class="col-sm-12">
+            <nav>
+              <ul class="unstyled tabs">
+                <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
+                <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
+                <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
+                <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+              </ul>
+            </nav>
+          </div>
+          <div id="form1" class="col-sm-12 b-forms__tab">
+            <div style="width: 300px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/da489d8f0fb702dbcbd9a81294264b48.js?v=469" async></script></div>
+          </div>
+          <div id="form2" class="col-sm-12 b-forms__tab">
+            <div style="width: 100px; background-color: lightgreen;">form2</div>
+          </div>
+          <div id="form3" class="col-sm-12 b-forms__tab">
+            <div style="width: 500px; background-color: violet;">form3</div>
+          </div>
+          <div id="form4" class="col-sm-12 b-forms__tab">
+            <div style="width: 600px; background-color: lightblue;">form4</div>
+          </div>
+        </div>
+      </div>
+      <!-- end /components/forms/-->
+      <hr class="i-size-L">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h1>Travellers — универсальное туристкое агентство</h1>
+          <p>Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. </p>
+          <p>Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.</p>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
+            <div class="col-sm-6">
+              <h2>Широчайший выбор стран</h2>
+              <p>Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6 col-sm-push-6 center"><img src="/upload/about2.png" alt="" class="img-responsive"></div>
+            <div class="col-sm-6 col-sm-pull-6">
+              <h2>Качественный сервис</h2>
+              <p>Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
+            <div class="col-sm-6">
+              <h2>Надежный партнер</h2>
+              <p>Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».</p>
+              <p>Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="b-footer">
       <section class="container">
@@ -169,7 +216,7 @@
             <p>Мневники, дом 3, строение 1, офис 224.<br><a href="">На карте (Схема проезда)</a></p>
             <h3>Телефоны</h3>
             <p>+ 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)</p>
-            <hr class="i-unstyled">
+            <hr class="unstyled">
             <ul class="unstyled b-footer-social">
               <li><a href="" class="i-vk"></a></li>
               <li><a href="" class="i-ok"></a></li>
@@ -178,6 +225,7 @@
               <li><a href="" class="i-gp"></a></li>
             </ul>
           </div>
+          <hr class="unstyled visible-xs-block">
           <div class="col-sm-4">
             <h3>Полезная информация</h3>
             <ul class="unstyled">
@@ -195,7 +243,7 @@
           <p>ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.</p>
           <p>Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.</p>
         </div>
-        <hr class="i-unstyled i-size-S">
+        <hr class="unstyled i-size-S">
         <div class="row xsmall">
           <div class="col-xs-6">© Сopyright. Traveller 2016</div>
           <div class="col-xs-6 text-right"><a href="http://bejet.ru" target="_blank">Решение создано в Bejet.</a></div>
