--- a/markup/tours/index.html
+++ b/markup/tours/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Main page | travellers</title>
+    <title>Tours | travellers</title>
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -44,102 +44,50 @@
     </header>
     <section class="container">
       <hr class="i-unstyled">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h1>Туры по всему миру</h1>
+          <p>Мы предлагаем вам забронировать туры по всему миру.</p>
+        </div>
+      </div>
+      <hr class="i-unstyled">
       <!-- start /components/banner.21/-->
       <div class="b-banner-21 b-banner">
         <div class="row">
           <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Старушка Европа</div>
-              <div class="b-banner__title">Увидеть Париж</div>
-              <div class="b-banner__type">Прогулки по летнему Парижу</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">76 900 руб.</span>
-              </div>
-            </div>
+            <div class="b-card-text">Экскурсионные туры в Европу</div>
           </div>
           <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Сказка</div>
-              <div class="b-banner__title">Северное сияние в Исландии</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">466 800 руб.</span>
-              </div>
-            </div>
+            <div class="b-card-text">Недорогие туры в Крым</div>
           </div>
         </div>
       </div>
       <!-- end /components/banner.21/-->
-      <!-- start /components/banner.111/-->
-      <div class="b-banner-111 b-banner">
-        <div class="row">
-          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Южная америка</div>
-              <div class="b-banner__title">Гаваи, Коста Рика, Куба</div>
-              <div class="b-banner__type">Туры с авиаперелетом. Пляжный отдых</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">266 800 руб.</span>
-              </div>
-            </div>
-          </div>
-          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Горные лыжи</div>
-              <div class="b-banner__title">Австрия</div>
-              <div class="b-banner__type">Туры на европейские горнолыжные курорты.</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">106 800 руб.</span>
-              </div>
-            </div>
-          </div>
-          <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Северная америка</div>
-              <div class="b-banner__title">Путешествие по Аризоне</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">466 800 руб.</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/banner.111/-->
       <!-- start /components/banner.12/-->
       <div class="b-banner-12 b-banner">
         <div class="row">
           <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Старушка Европа</div>
-              <div class="b-banner__title">Увидеть Париж</div>
-              <div class="b-banner__type">Прогулки по летнему Парижу</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">76 900 руб.</span>
-              </div>
-            </div>
+            <div class="b-card-text">Недорогие туры в крым</div>
           </div>
           <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8">
-            <div class="b-banner__text">
-              <div class="b-banner__section">Сказка</div>
-              <div class="b-banner__title">Северное сияние в Исландии</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
-                от
-                 <span class="b-banner__price__num">466 800 руб.</span>
-              </div>
-            </div>
+            <div class="b-card-text">Экскурсионные туры в Европу</div>
           </div>
         </div>
       </div>
       <!-- end /components/banner.12/-->
-      <hr class="i-unstyled i-size-S">
+      <!-- start /components/banner.21/-->
+      <div class="b-banner-21 b-banner">
+        <div class="row">
+          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
+            <div class="b-card-text">Экскурсионные туры в Европу</div>
+          </div>
+          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
+            <div class="b-card-text">Недорогие туры в Крым</div>
+          </div>
+        </div>
+      </div>
+      <!-- end /components/banner.21/-->
+      <hr class="i-size-M i-unstyled">
       <!-- start /components/forms/-->
       <link rel="stylesheet" href="/components/forms/style.css">
       <script src="/components/forms/script.js"></script>
@@ -170,39 +118,7 @@
         </div>
       </div>
       <!-- end /components/forms/-->
-      <hr class="i-size-L">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h1>Travellers — универсальное туристкое агентство</h1>
-          <p>Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. </p>
-          <p>Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.</p>
-          <hr>
-          <div class="row">
-            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6">
-              <h2>Широчайший выбор стран</h2>
-              <p>Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col-sm-6 col-sm-push-6 center"><img src="/upload/about2.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6 col-sm-pull-6">
-              <h2>Качественный сервис</h2>
-              <p>Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6">
-              <h2>Надежный партнер</h2>
-              <p>Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».</p>
-              <p>Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <hr class="i-size-M i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
