Markup - Forms normalize.css

--- a/markup/index.html
+++ b/markup/index.html
@@ -203,6 +203,7 @@
           </div>
         </div>
       </div>
+      <hr class="i-size-M i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
