Markup - Aviatickets page.

--- a/markup/aviatickets/index.html
+++ b/markup/aviatickets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Graphic User Interface | travellers</title>
+    <title>Aviatickets | travellers</title>
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -43,70 +43,27 @@
       </nav>
     </header>
     <section class="container">
+      <hr class="i-unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <h1>Туристическая компания</h1>
-          <p>S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</p>
-          <h2>Заголовок</h2>
-          <p>История авиакомпании началась в 1957 году с момента выполнения первого гражданского рейса с военного аэродрома в Новосибирской области, находящегося в составе Толмачёвского объединенного авиаотряда. На базе этого авиаотряда была образована авиакомпания «Сибирь». С 2005 года авиакомпания «Сибирь» выполняет полеты под брендом S7 Airlines.</p>
-          <p>В мае 2012 года исполнилось 20 лет со дня основания авиакомпании «Сибирь», как самостоятельной организации.</p>
-          <h3>Список</h3>
-          <ul>
-            <li>Пункт списка</li>
-            <li>Есть масса путеводителей по странам, но ни одного о том, как провести время в самолете. Для того, чтобы сделать ваш перелет максимально комфортным, мы написали 20 советов о подготовке к путешествию. Ведь настоящее путешествие начинается со слов «Добро пожаловать на борт нашего самолета»!</li>
-            <li>Пункт списка</li>
-            <li>Пункт списка</li>
-          </ul>
-          <hr class="unstyled">
-          <ol>
-            <li>Пункт списка</li>
-            <li>Есть масса путеводителей по странам, но ни одного о том, как провести время в самолете. Для того, чтобы сделать ваш перелет максимально комфортным, мы написали 20 советов о подготовке к путешествию. Ведь настоящее путешествие начинается со слов «Добро пожаловать на борт нашего самолета»!</li>
-            <li>Пункт списка</li>
-            <li>Пункт списка</li>
-          </ol>
+          <h1>Авиабилеты по всему миру</h1>
+          <p>Мы предлагаем вам забронировать авиабилеты по всему миру.</p>
         </div>
       </div>
-      <hr class="i-size-XL">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <div class="row">
-            <div class="col-sm-6"><img src="/upload/img.gif" class="img-responsive"></div>
-            <div class="col-sm-6">
-              <S7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</S7>
-            </div>
-          </div>
-          <hr class="unstyled">
-          <div class="row">
-            <div class="col-sm-6">
-              <S7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</S7>
-            </div>
-            <div class="col-sm-6"><img src="/upload/img.gif" class="img-responsive"></div>
-          </div>
+      <hr class="i-unstyled">
+      <!-- start /components/forms/-->
+      <link rel="stylesheet" href="/components/forms/style.css">
+      <script src="/components/forms/script.js"></script>
+      <div class="b-forms">
+        <div class="b-forms__tab hidden-xs">
+          <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+        </div>
+        <div class="b-forms__tab visible-xs-block">
+          <div style="width: 300px; background-color: blue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2"><img src="/upload/img.gif" class="img-responsive"></div>
-      </div>
+      <!-- end /components/forms/-->
+      <hr class="i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
