--- a/markup/forms/index.html
+++ b/markup/forms/index.html
@@ -33,10 +33,10 @@
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
               <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
-              <li><a href="">Туры</a></li>
-              <li><a href="">Авиабилеты</a></li>
-              <li><a href="">Отели</a></li>
-              <li><a href="">О нас</a></li>
+              <li><a href="/tours/">Туры</a></li>
+              <li><a href="/aviatickets/">Авиабилеты</a></li>
+              <li><a href="/hotels/">Отели</a></li>
+              <li><a href="/about/">О нас</a></li>
             </ul>
           </div>
         </div>
@@ -60,7 +60,7 @@
             </nav>
           </div>
           <div id="form1" class="col-sm-12 b-forms__tab">
-            <div style="width: 300px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
           </div>
           <div id="form2" class="col-sm-12 b-forms__tab">
             <div style="width: 100px; background-color: lightgreen;">form2</div>
