--- a/markup/tours/tour/index.html
+++ b/markup/tours/tour/index.html
@@ -33,10 +33,10 @@
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
               <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
-              <li><a href="">Туры</a></li>
-              <li><a href="">Авиабилеты</a></li>
-              <li><a href="">Отели</a></li>
-              <li><a href="">О нас</a></li>
+              <li><a href="/tours/">Туры</a></li>
+              <li><a href="/aviatickets/">Авиабилеты</a></li>
+              <li><a href="/hotels/">Отели</a></li>
+              <li><a href="/about/">О нас</a></li>
             </ul>
           </div>
         </div>
