--- a/markup/hotels/index.html
+++ b/markup/hotels/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tours | travellers</title>
+    <title>Hotels | travellers</title>
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -46,79 +46,24 @@
       <hr class="i-unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <h1>Туры по всему миру</h1>
-          <p>Мы предлагаем вам забронировать туры по всему миру.</p>
+          <h1>Отели по всему миру</h1>
+          <p>Мы предлагаем вам забронировать отели по всему миру.</p>
         </div>
       </div>
       <hr class="i-unstyled">
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
-        <div class="row">
-          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
-            <div class="b-card-text">Экскурсионные туры в Европу</div>
-          </div>
-          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
-            <div class="b-card-text">Недорогие туры в Крым</div>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/banner.21/-->
-      <!-- start /components/banner.12/-->
-      <div class="b-banner-12 b-banner">
-        <div class="row">
-          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-            <div class="b-card-text">Недорогие туры в крым</div>
-          </div>
-          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8">
-            <div class="b-card-text">Экскурсионные туры в Европу</div>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/banner.12/-->
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
-        <div class="row">
-          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
-            <div class="b-card-text">Экскурсионные туры в Европу</div>
-          </div>
-          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
-            <div class="b-card-text">Недорогие туры в Крым</div>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/banner.21/-->
-      <hr class="i-size-M i-unstyled">
       <!-- start /components/forms/-->
       <link rel="stylesheet" href="/components/forms/style.css">
       <script src="/components/forms/script.js"></script>
       <div class="b-forms">
-        <div class="row">
-          <div class="col-sm-12">
-            <nav>
-              <ul class="unstyled tabs">
-                <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
-                <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
-                <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
-                <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
-              </ul>
-            </nav>
-          </div>
-          <div id="form1" class="col-sm-12 b-forms__tab">
-            <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
-          </div>
-          <div id="form2" class="col-sm-12 b-forms__tab">
-            <div style="width: 100px; background-color: lightgreen;">form2</div>
-          </div>
-          <div id="form3" class="col-sm-12 b-forms__tab">
-            <div style="width: 500px; background-color: violet;">form3</div>
-          </div>
-          <div id="form4" class="col-sm-12 b-forms__tab">
-            <div style="width: 600px; background-color: lightblue;">form4</div>
-          </div>
+        <div class="b-forms__tab hidden-xs">
+          <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+        </div>
+        <div class="b-forms__tab visible-xs-block">
+          <div style="width: 300px; background-color: blue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
         </div>
       </div>
       <!-- end /components/forms/-->
-      <hr class="i-size-M i-unstyled">
+      <hr class="i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
