--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -21,10 +21,10 @@
         <div class="container">
           <div class="nav-wrapper"><a href="#" class="brand-logo left"><img src="/upload/travellers-logo.png" alt="Travellers"></a>
             <ul class="unstyled b-header-top-menu center hide-on-med-and-down">
-              <li><span href="" class="i-disabled">Туры</span></li>
-              <li><a href="">Авиабилеты</a></li>
-              <li><a href="">Отели</a></li>
-              <li><a href="">О нас</a></li>
+              <li><span href="/tours/" class="i-disabled">Туры</span></li>
+              <li><a href="/aviatickets/">Авиабилеты</a></li>
+              <li><a href="/hotels/">Отели</a></li>
+              <li><a href="/about/">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
               <li><a href="" class="b-phone-icon"><i></i></a></li>
