Markup - Mobile forms on the index page.

--- a/markup/tours/index.html
+++ b/markup/tours/index.html
@@ -92,28 +92,56 @@
       <link rel="stylesheet" href="/components/forms/style.css">
       <script src="/components/forms/script.js"></script>
       <div class="b-forms">
-        <div class="row">
-          <div class="col-sm-12">
-            <nav>
-              <ul class="unstyled tabs">
-                <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
-                <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
-                <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
-                <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
-              </ul>
-            </nav>
+        <div class="hidden-xs">
+          <div class="row">
+            <div class="col-sm-12">
+              <nav>
+                <ul class="unstyled tabs">
+                  <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
+                  <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </ul>
+              </nav>
+            </div>
+            <div id="form1" class="col-sm-12 b-forms__tab">
+              <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form2" class="col-sm-12 b-forms__tab">
+              <div style="width: 100px; background-color: lightgreen;">form2</div>
+            </div>
+            <div id="form3" class="col-sm-12 b-forms__tab">
+              <div style="width: 500px; background-color: violet;">form3</div>
+            </div>
+            <div id="form4" class="col-sm-12 b-forms__tab">
+              <div style="width: 600px; background-color: lightblue;">form4</div>
+            </div>
           </div>
-          <div id="form1" class="col-sm-12 b-forms__tab">
-            <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
-          </div>
-          <div id="form2" class="col-sm-12 b-forms__tab">
-            <div style="width: 100px; background-color: lightgreen;">form2</div>
-          </div>
-          <div id="form3" class="col-sm-12 b-forms__tab">
-            <div style="width: 500px; background-color: violet;">form3</div>
-          </div>
-          <div id="form4" class="col-sm-12 b-forms__tab">
-            <div style="width: 600px; background-color: lightblue;">form4</div>
+        </div>
+        <div class="visible-xs-block">
+          <div class="row">
+            <div class="col-sm-12">
+              <nav>
+                <ul class="unstyled tabs">
+                  <li class="tab col-sm-3"><a href="#form5" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form6" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
+                  <li class="tab col-sm-3 disabled"><a href="#form7" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form8" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </ul>
+              </nav>
+            </div>
+            <div id="form5" class="col-sm-12 b-forms__tab">
+              <div style="width: 300px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form6" class="col-sm-12 b-forms__tab">
+              <div style="width: 100px; background-color: lightgreen;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form7" class="col-sm-12 b-forms__tab">
+              <div style="width: 500px; background-color: violet;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form8" class="col-sm-12 b-forms__tab">
+              <div style="width: 200px; background-color: lightblue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
           </div>
         </div>
       </div>
