Markup - Request form fixes.

--- a/markup/request/sent/index.html
+++ b/markup/request/sent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Request | travellers</title>
+    <title>Request sent | travellers</title>
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -46,65 +46,11 @@
       <hr class="i-unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <h1>Отправить запрос</h1>
-          <p>Отправьте запрос на интересующий вас тур и мы предложим вам оптимальный вариант путешествия.</p>
+          <h1>Ваша заявка отправлена</h1>
+          <p>Наши сотрудники обработают вашу заявку и свяжуться с вами в ближайшее время.</p>
+          <p><a href="/tours/">Вернуться на страницу «Туры»</a></p>
         </div>
       </div>
-      <hr class="i-unstyled">
-      <!-- start /components/forms.request/-->
-      <link rel="stylesheet" href="/components/forms.request/style.css">
-      <script src="/components/forms.request/script.js"></script>
-      <div class="b-forms">
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <hr class="i-unstyled">
-            <form action="sent/" method="get">
-              <div class="input-field">
-                <input id="first_name" type="text" required class="validate">
-                <label for="first_name">Как Вас зовут </label>
-              </div>
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="input-field">
-                    <input id="phone" type="tel" required class="validate">
-                    <label for="phone">Контактный телефон</label>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="input-field">
-                    <input id="email" type="email" required class="validate">
-                    <label for="email">Ваш email</label>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="input-field">
-                    <input id="country" type="text" required class="validate">
-                    <label for="country">Куда хотите поехать?</label>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="input-field">
-                    <input id="period" type="text" required class="validate">
-                    <label for="period">Даты путешествия</label>
-                  </div>
-                </div>
-              </div>
-              <div class="input-field">
-                <textarea id="message" class="materialize-textarea validate"></textarea>
-                <label for="message">Дополнительные заметки (необязательно)</label>
-              </div>
-              <hr class="i-unstyled">
-              <div class="center">
-                <button type="submit" class="btn-large">Отправить заявку</button>
-              </div>
-            </form>
-            <hr class="i-unstyled">
-          </div>
-        </div>
-      </div>
-      <!-- end /components/forms.request/-->
       <hr class="i-unstyled">
     </section>
     <footer class="b-footer">
