Markup - Forms icons for mobile version.

--- a/markup/index.html
+++ b/markup/index.html
@@ -154,10 +154,10 @@
             <div class="col-sm-12">
               <nav>
                 <ul class="unstyled tabs">
-                  <li class="tab col-sm-3"><a href="#form5" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
-                  <li class="tab col-sm-3"><a href="#form6" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
-                  <li class="tab col-sm-3 disabled"><a href="#form7" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
-                  <li class="tab col-sm-3"><a href="#form8" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form5" title="Поиск туров" class="i-tours"></a></li>
+                  <li class="tab col-sm-3"><a href="#form6" title="Поиск авиабилетов" class="i-avia"></a></li>
+                  <li class="tab col-sm-3 disabled"><a href="#form7" title="Поиск отелей" class="i-hotels"></a></li>
+                  <li class="tab col-sm-3"><a href="#form8" titile="Бронирование автомобилей" class="i-cars"></a></li>
                 </ul>
               </nav>
             </div>
