--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -113,8 +113,9 @@
         <div class="row">
           <div class="col-sm-4">
             <h3>О компании</h3>
-            <pS7>Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</pS7>
+            <p>S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</p>
           </div>
+          <hr class="unstyled visible-xs-block i-size-M">
           <div class="col-sm-4">
             <h3>Офис</h3>
             <p>Мневники, дом 3, строение 1, офис 224.<br><a href="">На карте (Схема проезда)</a></p>
